--- a/requirements.txt
+++ b/requirements.txt
@@ -1,37 +1,38 @@
+# pip list --format=freeze > requirements.txt
 absl-py==2.1.0
-asttokens @ file:///home/conda/feedstock_root/build_artifacts/asttokens_1698341106958/work
+asttokens==2.4.1
 attrs==23.2.0
 cffi==1.16.0
-comm @ file:///home/conda/feedstock_root/build_artifacts/comm_1710320294760/work
+comm==0.2.2
 contourpy==1.2.1
 cvzone==1.6.1
 cycler==0.12.1
-debugpy @ file:///croot/debugpy_1690905042057/work
-decorator @ file:///home/conda/feedstock_root/build_artifacts/decorator_1641555617451/work
-exceptiongroup @ file:///home/conda/feedstock_root/build_artifacts/exceptiongroup_1704921103267/work
-executing @ file:///home/conda/feedstock_root/build_artifacts/executing_1698579936712/work
+debugpy==1.6.7
+decorator==5.1.1
+exceptiongroup==1.2.0
+executing==2.0.1
 filelock==3.13.3
 flatbuffers==24.3.25
 fonttools==4.51.0
 fsspec==2024.3.1
-importlib_metadata @ file:///home/conda/feedstock_root/build_artifacts/importlib-metadata_1710971335535/work
-ipykernel @ file:///home/conda/feedstock_root/build_artifacts/ipykernel_1708996548741/work
-ipython @ file:///home/conda/feedstock_root/build_artifacts/ipython_1709559745751/work
+importlib_metadata==7.1.0
+ipykernel==6.29.3
+ipython==8.22.2
 jax==0.4.26
 jaxlib==0.4.26
-jedi @ file:///home/conda/feedstock_root/build_artifacts/jedi_1696326070614/work
+jedi==0.19.1
 Jinja2==3.1.3
-jupyter_client @ file:///home/conda/feedstock_root/build_artifacts/jupyter_client_1710255804825/work
-jupyter_core @ file:///home/conda/feedstock_root/build_artifacts/jupyter_core_1710257277185/work
+jupyter_client==8.6.1
+jupyter_core==5.7.2
 kiwisolver==1.4.5
 MarkupSafe==2.1.5
 matplotlib==3.8.4
-matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1713250518406/work
+matplotlib-inline==0.1.7
 mediapipe==0.10.11
 ml-dtypes==0.4.0
 MouseInfo==0.1.3
 mpmath==1.3.0
-nest_asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1705850609492/work
+nest_asyncio==1.6.0
 networkx==3.2.1
 numpy==1.26.4
 nvidia-cublas-cu12==12.1.3.1
@@ -49,39 +50,42 @@ nvidia-nvtx-cu12==12.1.105
 opencv-contrib-python==4.9.0.80
 opencv-python==4.9.0.80
 opt-einsum==3.3.0
-packaging @ file:///home/conda/feedstock_root/build_artifacts/packaging_1710075952259/work
-parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1712320355065/work
-pexpect @ file:///home/conda/feedstock_root/build_artifacts/pexpect_1706113125309/work
-pickleshare @ file:///home/conda/feedstock_root/build_artifacts/pickleshare_1602536217715/work
+packaging==24.0
+parso==0.8.4
+pexpect==4.9.0
+pickleshare==0.7.5
 pillow==10.3.0
-platformdirs @ file:///home/conda/feedstock_root/build_artifacts/platformdirs_1706713388748/work
-prompt-toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1702399386289/work
+pip==23.3.1
+platformdirs==4.2.0
+prompt-toolkit==3.0.42
 protobuf==3.20.3
-psutil @ file:///home/conda/feedstock_root/build_artifacts/psutil_1705722392846/work
-ptyprocess @ file:///home/conda/feedstock_root/build_artifacts/ptyprocess_1609419310487/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
-pure-eval @ file:///home/conda/feedstock_root/build_artifacts/pure_eval_1642875951954/work
+psutil==5.9.8
+ptyprocess==0.7.0
+pure-eval==0.2.2
 PyAutoGUI==0.9.54
 pycparser==2.22
 PyGetWindow==0.0.9
-Pygments @ file:///home/conda/feedstock_root/build_artifacts/pygments_1700607939962/work
+Pygments==2.17.2
 PyMsgBox==1.0.9
 pyparsing==3.1.2
 pyperclip==1.8.2
 PyRect==0.2.0
 PyScreeze==0.1.30
-python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/python-dateutil_1709299778482/work
+python-dateutil==2.9.0
 python3-xlib==0.15
 pytweening==1.2.0
-pyzmq @ file:///croot/pyzmq_1705605076900/work
+pyzmq==25.1.2
 scipy==1.13.0
-six @ file:///home/conda/feedstock_root/build_artifacts/six_1620240208055/work
+setuptools==68.2.2
+six==1.16.0
 sounddevice==0.4.6
-stack-data @ file:///home/conda/feedstock_root/build_artifacts/stack_data_1669632077133/work
+stack-data==0.6.2
 sympy==1.12
 torch==2.2.2
-tornado @ file:///home/conda/feedstock_root/build_artifacts/tornado_1708363098266/work
-traitlets @ file:///home/conda/feedstock_root/build_artifacts/traitlets_1710254411456/work
+tornado==6.4
+traitlets==5.14.2
 triton==2.2.0
-typing_extensions @ file:///home/conda/feedstock_root/build_artifacts/typing_extensions_1712329955671/work
-wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1704731205417/work
-zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1695255097490/work
+typing_extensions==4.11.0
+wcwidth==0.2.13
+wheel==0.41.2
+zipp==3.17.0
